--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1492,5 +1492,7 @@
     "MessageTunerDeviceNotListed": "Is your tuner device not listed? Try installing an external service provider for more Live TV options.",
     "LabelImportOnlyFavoriteChannels": "Restrict to channels marked as favorite",
     "ImportFavoriteChannelsHelp": "If enabled, only channels that are marked as favorite on the tuner device will be imported.",
-    "ButtonRepeat": "Repeat"
+    "ButtonRepeat": "Repeat",
+    "LabelEnableThisTuner": "Enable this tuner",
+    "LabelEnableThisTunerHelp": "Uncheck to prevent importing channels from this tuner."
 }
