--- a/MediaBrowser.Server.Implementations/Localization/Core/da.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/da.json
@@ -124,5 +124,53 @@
     "HeaderImagePrimary": "Primary",
     "HeaderImageBackdrop": "Backdrop",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUserPrimaryImage": "User Image",
+    "HeaderOverview": "Overview",
+    "HeaderShortOverview": "Short Overview",
+    "HeaderType": "Type",
+    "HeaderSeverity": "Severity",
+    "HeaderUser": "Bruger",
+    "HeaderName": "Navn",
+    "HeaderDate": "Dato",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "Udgivelsesdato",
+    "HeaderRuntime": "Varighed",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "S\u00e6son",
+    "HeaderSeasonNumber": "S\u00e6sonnummer",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "Netv\u00e6rk",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "F\u00e6llesskabsvurdering",
+    "HeaderTrailers": "Trailere",
+    "HeaderSpecials": "S\u00e6rudsendelser",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "Albums",
+    "HeaderDisc": "Disk",
+    "HeaderTrack": "Spor",
+    "HeaderAudio": "Lyd",
+    "HeaderVideo": "Video",
+    "HeaderEmbeddedImage": "Indlejret billede",
+    "HeaderResolution": "Opl\u00f8sning",
+    "HeaderSubtitles": "Undertekster",
+    "HeaderGenres": "Genrer",
+    "HeaderCountries": "Lande",
+    "HeaderStatus": "Status",
+    "HeaderTracks": "Spor",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Locked",
+    "HeaderStudios": "Studier",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "Aldersgr\u00e6nser",
+    "HeaderCommunityRatings": "Community ratings"
 }
