--- a/MediaBrowser.Server.Implementations/Localization/Core/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/de.json
@@ -120,9 +120,57 @@
     "UserStartedPlayingItemWithValues": "{0} hat die Wiedergabe von {1} gestartet",
     "UserStoppedPlayingItemWithValues": "{0} hat die Wiedergabe von {1} beendet",
     "SubtitleDownloadFailureForItem": "Download der Untertitel fehlgeschlagen f\u00fcr {0}",
-    "HeaderUnidentified": "Unidentified",
-    "HeaderImagePrimary": "Primary",
-    "HeaderImageBackdrop": "Backdrop",
+    "HeaderUnidentified": "Nicht identifiziert",
+    "HeaderImagePrimary": "Bevorzugt",
+    "HeaderImageBackdrop": "Hintergrund",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUserPrimaryImage": "Benutzerbild",
+    "HeaderOverview": "\u00dcbersicht",
+    "HeaderShortOverview": "Kurz\u00fcbersicht",
+    "HeaderType": "Typ",
+    "HeaderSeverity": "Severity",
+    "HeaderUser": "Benutzer",
+    "HeaderName": "Name",
+    "HeaderDate": "Datum",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "Ver\u00f6ffentlichungsdatum",
+    "HeaderRuntime": "Laufzeit",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "Staffel",
+    "HeaderSeasonNumber": "Staffel Nummer",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "Netzwerk",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "Community Bewertung",
+    "HeaderTrailers": "Trailer",
+    "HeaderSpecials": "Extras",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "Alben",
+    "HeaderDisc": "Disc",
+    "HeaderTrack": "St\u00fcck",
+    "HeaderAudio": "Audio",
+    "HeaderVideo": "Video",
+    "HeaderEmbeddedImage": "Integriertes Bild",
+    "HeaderResolution": "Aufl\u00f6sung",
+    "HeaderSubtitles": "Untertitel",
+    "HeaderGenres": "Genres",
+    "HeaderCountries": "L\u00e4nder",
+    "HeaderStatus": "Status",
+    "HeaderTracks": "Lieder",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Blockiert",
+    "HeaderStudios": "Studios",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "Altersbeschr\u00e4nkung",
+    "HeaderCommunityRatings": "Community ratings"
 }
