--- a/MediaBrowser.Server.Implementations/Localization/Core/es-MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/es-MX.json
@@ -120,9 +120,57 @@
     "UserStartedPlayingItemWithValues": "{0} ha iniciado la reproducci\u00f3n de {1}",
     "UserStoppedPlayingItemWithValues": "{0} ha detenido la reproducci\u00f3n de {1}",
     "SubtitleDownloadFailureForItem": "Fall\u00f3 la descarga de subt\u00edtulos para {0}",
-    "HeaderUnidentified": "Unidentified",
-    "HeaderImagePrimary": "Primary",
-    "HeaderImageBackdrop": "Backdrop",
+    "HeaderUnidentified": "No Identificado",
+    "HeaderImagePrimary": "Principal",
+    "HeaderImageBackdrop": "Imagen de Fondo",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUserPrimaryImage": "Imagen de Usuario",
+    "HeaderOverview": "Resumen",
+    "HeaderShortOverview": "Sinopsis corta:",
+    "HeaderType": "Tipo",
+    "HeaderSeverity": "Severidad",
+    "HeaderUser": "Usuario",
+    "HeaderName": "Nombre",
+    "HeaderDate": "Fecha",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "Fecha de estreno",
+    "HeaderRuntime": "Duraci\u00f3n",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "Temporada",
+    "HeaderSeasonNumber": "N\u00famero de temporada",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "Cadena",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "Calificaci\u00f3n de la comunidad",
+    "HeaderTrailers": "Tr\u00e1ilers",
+    "HeaderSpecials": "Especiales",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "\u00c1lbumes",
+    "HeaderDisc": "Disco",
+    "HeaderTrack": "Pista",
+    "HeaderAudio": "Audio",
+    "HeaderVideo": "Video",
+    "HeaderEmbeddedImage": "Im\u00e1gen embebida",
+    "HeaderResolution": "Resoluci\u00f3n",
+    "HeaderSubtitles": "Subt\u00edtulos",
+    "HeaderGenres": "G\u00e9neros",
+    "HeaderCountries": "Pa\u00edses",
+    "HeaderStatus": "Estado",
+    "HeaderTracks": "Pistas",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Bloqueado",
+    "HeaderStudios": "Estudios",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "Clasificaci\u00f3n Parental",
+    "HeaderCommunityRatings": "Community ratings"
 }
