--- a/MediaBrowser.Server.Implementations/Localization/Core/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/fr.json
@@ -124,5 +124,53 @@
     "HeaderImagePrimary": "Primaire",
     "HeaderImageBackdrop": "Contexte",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "Avatar de l'utilisateur"
+    "HeaderUserPrimaryImage": "Avatar de l'utilisateur",
+    "HeaderOverview": "Aper\u00e7u",
+    "HeaderShortOverview": "Synopsys",
+    "HeaderType": "Type",
+    "HeaderSeverity": "S\u00e9v\u00e9rit\u00e9",
+    "HeaderUser": "Utilisateur",
+    "HeaderName": "Nom",
+    "HeaderDate": "Date",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "Date de sortie ",
+    "HeaderRuntime": "Dur\u00e9e",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "Saison",
+    "HeaderSeasonNumber": "Num\u00e9ro de saison",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "R\u00e9seau",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "Note de la communaut\u00e9",
+    "HeaderTrailers": "Bandes-annonces",
+    "HeaderSpecials": "Episodes sp\u00e9ciaux",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "Albums",
+    "HeaderDisc": "Disque",
+    "HeaderTrack": "Piste",
+    "HeaderAudio": "Audio",
+    "HeaderVideo": "Vid\u00e9o",
+    "HeaderEmbeddedImage": "Image int\u00e9gr\u00e9e",
+    "HeaderResolution": "R\u00e9solution",
+    "HeaderSubtitles": "Sous-titres",
+    "HeaderGenres": "Genres",
+    "HeaderCountries": "Pays",
+    "HeaderStatus": "\u00c9tat",
+    "HeaderTracks": "Pistes",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Verrouill\u00e9",
+    "HeaderStudios": "Studios",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "Note parentale",
+    "HeaderCommunityRatings": "Community ratings"
 }
