--- a/MediaBrowser.Server.Implementations/Localization/Core/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/nb.json
@@ -124,5 +124,53 @@
     "HeaderImagePrimary": "Primary",
     "HeaderImageBackdrop": "Backdrop",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUserPrimaryImage": "User Image",
+    "HeaderOverview": "Overview",
+    "HeaderShortOverview": "Short Overview",
+    "HeaderType": "Type",
+    "HeaderSeverity": "Severity",
+    "HeaderUser": "Bruker",
+    "HeaderName": "Navn",
+    "HeaderDate": "Dato",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "Utgivelsesdato",
+    "HeaderRuntime": "Spilletid",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "Sesong",
+    "HeaderSeasonNumber": "Sesong nummer",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "Nettverk",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "Fellesskap anmeldelse",
+    "HeaderTrailers": "Trailere",
+    "HeaderSpecials": "Specials",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "Albumer",
+    "HeaderDisc": "Disk",
+    "HeaderTrack": "Spor",
+    "HeaderAudio": "Lyd",
+    "HeaderVideo": "Video",
+    "HeaderEmbeddedImage": "innebygd bilde",
+    "HeaderResolution": "Oppl\u00f8sning",
+    "HeaderSubtitles": "Undertekster",
+    "HeaderGenres": "Sjanger",
+    "HeaderCountries": "Land",
+    "HeaderStatus": "Status",
+    "HeaderTracks": "Spor",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Locked",
+    "HeaderStudios": "Studioer",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "Foreldresensur",
+    "HeaderCommunityRatings": "Community ratings"
 }
