--- a/MediaBrowser.Server.Implementations/Localization/Core/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/nl.json
@@ -124,5 +124,53 @@
     "HeaderImagePrimary": "Primary",
     "HeaderImageBackdrop": "Backdrop",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUserPrimaryImage": "User Image",
+    "HeaderOverview": "Overview",
+    "HeaderShortOverview": "Short Overview",
+    "HeaderType": "Type",
+    "HeaderSeverity": "Severity",
+    "HeaderUser": "Gebruiker",
+    "HeaderName": "Naam",
+    "HeaderDate": "Datum",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "Uitgave datum",
+    "HeaderRuntime": "Speelduur",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "Seizoen",
+    "HeaderSeasonNumber": "Seizoen nummer",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "Zender",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "Gemeenschap cijfer",
+    "HeaderTrailers": "Trailers",
+    "HeaderSpecials": "Specials",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "Albums",
+    "HeaderDisc": "Schijf",
+    "HeaderTrack": "Track",
+    "HeaderAudio": "Audio",
+    "HeaderVideo": "Video",
+    "HeaderEmbeddedImage": "Ingesloten afbeelding",
+    "HeaderResolution": "Resolutie",
+    "HeaderSubtitles": "Ondertitels",
+    "HeaderGenres": "Genres",
+    "HeaderCountries": "Landen",
+    "HeaderStatus": "Status",
+    "HeaderTracks": "Tracks",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Locked",
+    "HeaderStudios": "Studio's",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "Ouderlijke toezicht",
+    "HeaderCommunityRatings": "Community ratings"
 }
