--- a/MediaBrowser.Server.Implementations/Localization/Core/pt-BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/pt-BR.json
@@ -120,9 +120,57 @@
     "UserStartedPlayingItemWithValues": "{0} come\u00e7ou a reproduzir {1}",
     "UserStoppedPlayingItemWithValues": "{0} parou de reproduzir {1}",
     "SubtitleDownloadFailureForItem": "Falha ao baixar legendas para {0}",
-    "HeaderUnidentified": "Unidentified",
-    "HeaderImagePrimary": "Primary",
-    "HeaderImageBackdrop": "Backdrop",
+    "HeaderUnidentified": "N\u00e3o-identificado",
+    "HeaderImagePrimary": "Principal",
+    "HeaderImageBackdrop": "Imagem de Fundo",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUserPrimaryImage": "Imagem do Usu\u00e1rio",
+    "HeaderOverview": "Sinopse",
+    "HeaderShortOverview": "Sinopse curta",
+    "HeaderType": "Tipo",
+    "HeaderSeverity": "Severidade",
+    "HeaderUser": "Usu\u00e1rio",
+    "HeaderName": "Nome",
+    "HeaderDate": "Data",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "Data de lan\u00e7amento",
+    "HeaderRuntime": "Dura\u00e7\u00e3o",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "Temporada",
+    "HeaderSeasonNumber": "N\u00famero da temporada",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "Rede de TV",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "Avalia\u00e7\u00e3o da Comunidade",
+    "HeaderTrailers": "Trailers",
+    "HeaderSpecials": "Especiais",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "\u00c1lbuns",
+    "HeaderDisc": "Disco",
+    "HeaderTrack": "Faixa",
+    "HeaderAudio": "\u00c1udio",
+    "HeaderVideo": "V\u00eddeo",
+    "HeaderEmbeddedImage": "Imagem incorporada",
+    "HeaderResolution": "Resolu\u00e7\u00e3o",
+    "HeaderSubtitles": "Legendas",
+    "HeaderGenres": "G\u00eaneros",
+    "HeaderCountries": "Pa\u00edses",
+    "HeaderStatus": "Status",
+    "HeaderTracks": "Faixas",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Travado",
+    "HeaderStudios": "Est\u00fadios",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "Classifica\u00e7\u00f5es Parentais",
+    "HeaderCommunityRatings": "Community ratings"
 }
