--- a/MediaBrowser.Server.Implementations/Localization/Core/ro.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/ro.json
@@ -124,5 +124,53 @@
     "HeaderImagePrimary": "Primary",
     "HeaderImageBackdrop": "Backdrop",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUserPrimaryImage": "User Image",
+    "HeaderOverview": "Overview",
+    "HeaderShortOverview": "Short Overview",
+    "HeaderType": "Type",
+    "HeaderSeverity": "Severity",
+    "HeaderUser": "User",
+    "HeaderName": "Name",
+    "HeaderDate": "Date",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "Release date",
+    "HeaderRuntime": "Runtime",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "Season",
+    "HeaderSeasonNumber": "Season number",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "Network",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "Community rating",
+    "HeaderTrailers": "Trailers",
+    "HeaderSpecials": "Specials",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "Albums",
+    "HeaderDisc": "Disc",
+    "HeaderTrack": "Track",
+    "HeaderAudio": "Muzica",
+    "HeaderVideo": "Filme",
+    "HeaderEmbeddedImage": "Embedded image",
+    "HeaderResolution": "Resolution",
+    "HeaderSubtitles": "Subtitles",
+    "HeaderGenres": "Genres",
+    "HeaderCountries": "Countries",
+    "HeaderStatus": "Status",
+    "HeaderTracks": "Tracks",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Locked",
+    "HeaderStudios": "Studios",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "Parental Ratings",
+    "HeaderCommunityRatings": "Community ratings"
 }
