--- a/MediaBrowser.Server.Implementations/Localization/Core/ru.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/ru.json
@@ -120,9 +120,57 @@
     "UserStartedPlayingItemWithValues": "{0} - \u0432\u043e\u0441\u043f\u0440-\u0438\u0435 \u00ab{1}\u00bb \u0437\u0430\u043f-\u043d\u043e",
     "UserStoppedPlayingItemWithValues": "{0} - \u0432\u043e\u0441\u043f\u0440-\u0438\u0435 \u00ab{1}\u00bb \u043e\u0441\u0442-\u043d\u043e",
     "SubtitleDownloadFailureForItem": "\u0421\u0443\u0431\u0442\u0438\u0442\u0440\u044b \u043a {0} \u043d\u0435 \u0443\u0434\u0430\u043b\u043e\u0441\u044c \u0437\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044c",
-    "HeaderUnidentified": "Unidentified",
-    "HeaderImagePrimary": "Primary",
-    "HeaderImageBackdrop": "Backdrop",
-    "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUnidentified": "\u041d\u0435 \u0440\u0430\u0441\u043f\u043e\u0437\u043d\u0430\u043d\u043e",
+    "HeaderImagePrimary": "\u041f\u0435\u0440\u0432\u0438\u0447\u043d\u044b\u0439",
+    "HeaderImageBackdrop": "\u0417\u0430\u0434\u043d\u0438\u043a",
+    "HeaderImageLogo": "\u041b\u043e\u0433\u043e\u0442\u0438\u043f",
+    "HeaderUserPrimaryImage": "\u0420\u0438\u0441\u0443\u043d\u043e\u043a \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f",
+    "HeaderOverview": "\u041e\u0431\u0437\u043e\u0440",
+    "HeaderShortOverview": "\u041a\u0440\u0430\u0442\u043a\u0438\u0439 \u043e\u0431\u0437\u043e\u0440",
+    "HeaderType": "\u0422\u0438\u043f",
+    "HeaderSeverity": "\u0421\u0442\u0440\u043e\u0433\u043e\u0441\u0442\u044c",
+    "HeaderUser": "\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c",
+    "HeaderName": "\u0418\u043c\u044f (\u043d\u0430\u0437\u0432\u0430\u043d\u0438\u0435)",
+    "HeaderDate": "\u0414\u0430\u0442\u0430",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "\u0414\u0430\u0442\u0430 \u0432\u044b\u043f.",
+    "HeaderRuntime": "\u0414\u043b\u0438\u0442.",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "\u0421\u0435\u0437\u043e\u043d",
+    "HeaderSeasonNumber": "\u041d\u043e\u043c\u0435\u0440 \u0441\u0435\u0437\u043e\u043d\u0430",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "\u0422\u0435\u043b\u0435\u0441\u0435\u0442\u044c",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "\u041e\u0431\u0449. \u043e\u0446\u0435\u043d\u043a\u0430",
+    "HeaderTrailers": "\u0422\u0440\u0435\u0439\u043b.",
+    "HeaderSpecials": "\u0421\u043f\u0435\u0446.",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "\u0410\u043b\u044c\u0431\u043e\u043c\u044b",
+    "HeaderDisc": "\u0414\u0438\u0441\u043a",
+    "HeaderTrack": "\u0414\u043e\u0440-\u043a\u0430",
+    "HeaderAudio": "\u0410\u0443\u0434\u0438\u043e",
+    "HeaderVideo": "\u0412\u0438\u0434\u0435\u043e",
+    "HeaderEmbeddedImage": "\u0412\u043d\u0435\u0434\u0440\u0451\u043d\u043d\u044b\u0439 \u0440\u0438\u0441\u0443\u043d\u043e\u043a",
+    "HeaderResolution": "\u0420\u0430\u0437\u0440.",
+    "HeaderSubtitles": "\u0421\u0443\u0431\u0442.",
+    "HeaderGenres": "\u0416\u0430\u043d\u0440\u044b",
+    "HeaderCountries": "\u0421\u0442\u0440\u0430\u043d\u044b",
+    "HeaderStatus": "\u0421\u043e\u0441\u0442-\u0438\u0435",
+    "HeaderTracks": "\u0414\u043e\u0440-\u043a\u0438",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "\u0417\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u043e",
+    "HeaderStudios": "\u0421\u0442\u0443\u0434\u0438\u0438",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "\u0412\u043e\u0437\u0440\u0430\u0441\u0442\u043d\u0430\u044f \u043a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u044f",
+    "HeaderCommunityRatings": "Community ratings"
 }
