--- a/MediaBrowser.Server.Implementations/Localization/Core/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/sv.json
@@ -124,5 +124,53 @@
     "HeaderImagePrimary": "Primary",
     "HeaderImageBackdrop": "Backdrop",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUserPrimaryImage": "User Image",
+    "HeaderOverview": "Overview",
+    "HeaderShortOverview": "Short Overview",
+    "HeaderType": "Type",
+    "HeaderSeverity": "Severity",
+    "HeaderUser": "Anv\u00e4ndare",
+    "HeaderName": "Namn",
+    "HeaderDate": "Datum",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "Premi\u00e4rdatum:",
+    "HeaderRuntime": "Speltid",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "S\u00e4song",
+    "HeaderSeasonNumber": "S\u00e4songsnummer:",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "TV-bolag",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "Anv\u00e4ndaromd\u00f6me",
+    "HeaderTrailers": "Trailers",
+    "HeaderSpecials": "Specialer",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "Album",
+    "HeaderDisc": "Skiva",
+    "HeaderTrack": "Sp\u00e5r",
+    "HeaderAudio": "Ljud",
+    "HeaderVideo": "Video",
+    "HeaderEmbeddedImage": "Infogad bild",
+    "HeaderResolution": "Uppl\u00f6sning",
+    "HeaderSubtitles": "Undertexter",
+    "HeaderGenres": "Genrer",
+    "HeaderCountries": "L\u00e4nder",
+    "HeaderStatus": "Status",
+    "HeaderTracks": "Sp\u00e5r",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Locked",
+    "HeaderStudios": "Studior",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "Parental Ratings",
+    "HeaderCommunityRatings": "Community ratings"
 }
