--- a/MediaBrowser.Server.Implementations/Localization/Core/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/it.json
@@ -124,5 +124,53 @@
     "HeaderImagePrimary": "Primary",
     "HeaderImageBackdrop": "Backdrop",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUserPrimaryImage": "User Image",
+    "HeaderOverview": "Overview",
+    "HeaderShortOverview": "Short Overview",
+    "HeaderType": "Type",
+    "HeaderSeverity": "Severity",
+    "HeaderUser": "Utente",
+    "HeaderName": "Nome",
+    "HeaderDate": "Data",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "Data Rilascio",
+    "HeaderRuntime": "Durata",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "Stagione",
+    "HeaderSeasonNumber": "Stagione Numero",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "Rete",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "Voto Comunit\u00e0",
+    "HeaderTrailers": "Trailers",
+    "HeaderSpecials": "Speciali",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "Album",
+    "HeaderDisc": "Disco",
+    "HeaderTrack": "Traccia",
+    "HeaderAudio": "Audio",
+    "HeaderVideo": "Video",
+    "HeaderEmbeddedImage": "Immagine incorporata",
+    "HeaderResolution": "Risoluzione",
+    "HeaderSubtitles": "Sottotitoli",
+    "HeaderGenres": "Generi",
+    "HeaderCountries": "Paesi",
+    "HeaderStatus": "Stato",
+    "HeaderTracks": "Traccia",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Locked",
+    "HeaderStudios": "Studios",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "Valutazioni genitori",
+    "HeaderCommunityRatings": "Community ratings"
 }
