--- a/MediaBrowser.Server.Implementations/Localization/Core/uk.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/uk.json
@@ -124,5 +124,53 @@
     "HeaderImagePrimary": "Primary",
     "HeaderImageBackdrop": "Backdrop",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUserPrimaryImage": "User Image",
+    "HeaderOverview": "Overview",
+    "HeaderShortOverview": "Short Overview",
+    "HeaderType": "Type",
+    "HeaderSeverity": "Severity",
+    "HeaderUser": "User",
+    "HeaderName": "Name",
+    "HeaderDate": "Date",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "Release date",
+    "HeaderRuntime": "Runtime",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "\u0421\u0435\u0437\u043e\u043d",
+    "HeaderSeasonNumber": "Season number",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "Network",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "Community rating",
+    "HeaderTrailers": "\u0422\u0440\u0435\u0439\u043b\u0435\u0440\u0438",
+    "HeaderSpecials": "Specials",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "\u0410\u043b\u044c\u0431\u043e\u043c\u0438",
+    "HeaderDisc": "\u0414\u0438\u0441\u043a",
+    "HeaderTrack": "\u0414\u043e\u0440\u0456\u0436\u043a\u0430",
+    "HeaderAudio": "\u0410\u0443\u0434\u0456\u043e",
+    "HeaderVideo": "\u0412\u0456\u0434\u0435\u043e",
+    "HeaderEmbeddedImage": "Embedded image",
+    "HeaderResolution": "Resolution",
+    "HeaderSubtitles": "Subtitles",
+    "HeaderGenres": "Genres",
+    "HeaderCountries": "Countries",
+    "HeaderStatus": "Status",
+    "HeaderTracks": "\u0414\u043e\u0440\u0456\u0436\u043a\u0438",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Locked",
+    "HeaderStudios": "\u0421\u0442\u0443\u0434\u0456\u0457",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "Parental Ratings",
+    "HeaderCommunityRatings": "Community ratings"
 }
