--- a/MediaBrowser.Server.Implementations/Localization/Core/zh-CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/zh-CN.json
@@ -124,5 +124,53 @@
     "HeaderImagePrimary": "Primary",
     "HeaderImageBackdrop": "Backdrop",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image"
+    "HeaderUserPrimaryImage": "User Image",
+    "HeaderOverview": "Overview",
+    "HeaderShortOverview": "Short Overview",
+    "HeaderType": "Type",
+    "HeaderSeverity": "Severity",
+    "HeaderUser": "\u7528\u6237",
+    "HeaderName": "\u540d\u5b57",
+    "HeaderDate": "\u65e5\u671f",
+    "HeaderPremiereDate": "Premiere Date",
+    "HeaderDateAdded": "Date Added",
+    "HeaderReleaseDate": "\u53d1\u884c\u65e5\u671f",
+    "HeaderRuntime": "\u64ad\u653e\u65f6\u95f4",
+    "HeaderPlayCount": "Play Count",
+    "HeaderSeason": "\u5b63",
+    "HeaderSeasonNumber": "\u591a\u5c11\u5b63",
+    "HeaderSeries": "Series:",
+    "HeaderNetwork": "\u7f51\u7edc",
+    "HeaderYear": "Year:",
+    "HeaderYears": "Years:",
+    "HeaderParentalRating": "Parental Rating",
+    "HeaderCommunityRating": "\u516c\u4f17\u8bc4\u5206",
+    "HeaderTrailers": "\u9884\u544a\u7247",
+    "HeaderSpecials": "\u7279\u96c6",
+    "HeaderGameSystems": "Game Systems",
+    "HeaderPlayers": "Players:",
+    "HeaderAlbumArtists": "Album Artists",
+    "HeaderAlbums": "\u4e13\u8f91",
+    "HeaderDisc": "\u5149\u76d8",
+    "HeaderTrack": "\u97f3\u8f68",
+    "HeaderAudio": "\u97f3\u9891",
+    "HeaderVideo": "\u89c6\u9891",
+    "HeaderEmbeddedImage": "\u5d4c\u5165\u5f0f\u56fe\u50cf",
+    "HeaderResolution": "\u5206\u8fa8\u7387",
+    "HeaderSubtitles": "\u5b57\u5e55",
+    "HeaderGenres": "\u98ce\u683c",
+    "HeaderCountries": "\u56fd\u5bb6",
+    "HeaderStatus": "\u72b6\u6001",
+    "HeaderTracks": "\u97f3\u8f68",
+    "HeaderMusicArtist": "Music artist",
+    "HeaderLocked": "Locked",
+    "HeaderStudios": "\u5de5\u4f5c\u5ba4",
+    "HeaderActor": "Actors",
+    "HeaderComposer": "Composers",
+    "HeaderDirector": "Directors",
+    "HeaderGuestStar": "Guest star",
+    "HeaderProducer": "Producers",
+    "HeaderWriter": "Writers",
+    "HeaderParentalRatings": "\u5bb6\u957f\u5206\u7ea7",
+    "HeaderCommunityRatings": "Community ratings"
 }
