--- a/MediaBrowser.Server.Implementations/Localization/Core/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/de.json
@@ -132,24 +132,24 @@
     "HeaderUser": "Benutzer",
     "HeaderName": "Name",
     "HeaderDate": "Datum",
-    "HeaderPremiereDate": "Premiere Date",
-    "HeaderDateAdded": "Date Added",
+    "HeaderPremiereDate": "Premiere Datum",
+    "HeaderDateAdded": "Datum hinzugef\u00fcgt",
     "HeaderReleaseDate": "Ver\u00f6ffentlichungsdatum",
     "HeaderRuntime": "Laufzeit",
-    "HeaderPlayCount": "Play Count",
+    "HeaderPlayCount": "Anzahl Wiedergaben",
     "HeaderSeason": "Staffel",
     "HeaderSeasonNumber": "Staffel Nummer",
-    "HeaderSeries": "Series:",
+    "HeaderSeries": "Serien:",
     "HeaderNetwork": "Netzwerk",
-    "HeaderYear": "Year:",
-    "HeaderYears": "Years:",
-    "HeaderParentalRating": "Parental Rating",
+    "HeaderYear": "Jahr:",
+    "HeaderYears": "Jahre:",
+    "HeaderParentalRating": "Altersfreigabe",
     "HeaderCommunityRating": "Community Bewertung",
     "HeaderTrailers": "Trailer",
     "HeaderSpecials": "Extras",
-    "HeaderGameSystems": "Game Systems",
-    "HeaderPlayers": "Players:",
-    "HeaderAlbumArtists": "Album Artists",
+    "HeaderGameSystems": "Spiele Systeme",
+    "HeaderPlayers": "Spieler:",
+    "HeaderAlbumArtists": "Album K\u00fcnstler",
     "HeaderAlbums": "Alben",
     "HeaderDisc": "Disc",
     "HeaderTrack": "St\u00fcck",
@@ -162,15 +162,15 @@
     "HeaderCountries": "L\u00e4nder",
     "HeaderStatus": "Status",
     "HeaderTracks": "Lieder",
-    "HeaderMusicArtist": "Music artist",
+    "HeaderMusicArtist": "Musik K\u00fcnstler",
     "HeaderLocked": "Blockiert",
     "HeaderStudios": "Studios",
-    "HeaderActor": "Actors",
-    "HeaderComposer": "Composers",
-    "HeaderDirector": "Directors",
-    "HeaderGuestStar": "Guest star",
-    "HeaderProducer": "Producers",
-    "HeaderWriter": "Writers",
+    "HeaderActor": "Schauspieler",
+    "HeaderComposer": "Komponierer",
+    "HeaderDirector": "Regie",
+    "HeaderGuestStar": "Gaststar",
+    "HeaderProducer": "Produzenten",
+    "HeaderWriter": "Autoren",
     "HeaderParentalRatings": "Altersbeschr\u00e4nkung",
-    "HeaderCommunityRatings": "Community ratings"
+    "HeaderCommunityRatings": "Community Bewertungen"
 }
