--- a/MediaBrowser.Server.Implementations/Localization/Core/es-MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/es-MX.json
@@ -132,24 +132,24 @@
     "HeaderUser": "Usuario",
     "HeaderName": "Nombre",
     "HeaderDate": "Fecha",
-    "HeaderPremiereDate": "Premiere Date",
-    "HeaderDateAdded": "Date Added",
+    "HeaderPremiereDate": "Fecha de Estreno",
+    "HeaderDateAdded": "Fecha de Adici\u00f3n",
     "HeaderReleaseDate": "Fecha de estreno",
     "HeaderRuntime": "Duraci\u00f3n",
-    "HeaderPlayCount": "Play Count",
+    "HeaderPlayCount": "Contador",
     "HeaderSeason": "Temporada",
     "HeaderSeasonNumber": "N\u00famero de temporada",
     "HeaderSeries": "Series:",
     "HeaderNetwork": "Cadena",
-    "HeaderYear": "Year:",
-    "HeaderYears": "Years:",
-    "HeaderParentalRating": "Parental Rating",
+    "HeaderYear": "A\u00f1o:",
+    "HeaderYears": "A\u00f1os:",
+    "HeaderParentalRating": "Clasificaci\u00f3n Parental",
     "HeaderCommunityRating": "Calificaci\u00f3n de la comunidad",
     "HeaderTrailers": "Tr\u00e1ilers",
     "HeaderSpecials": "Especiales",
-    "HeaderGameSystems": "Game Systems",
-    "HeaderPlayers": "Players:",
-    "HeaderAlbumArtists": "Album Artists",
+    "HeaderGameSystems": "Sistemas de Juego",
+    "HeaderPlayers": "Reproductores:",
+    "HeaderAlbumArtists": "Artistas del \u00c1lbum",
     "HeaderAlbums": "\u00c1lbumes",
     "HeaderDisc": "Disco",
     "HeaderTrack": "Pista",
@@ -162,15 +162,15 @@
     "HeaderCountries": "Pa\u00edses",
     "HeaderStatus": "Estado",
     "HeaderTracks": "Pistas",
-    "HeaderMusicArtist": "Music artist",
+    "HeaderMusicArtist": "Int\u00e9rprete",
     "HeaderLocked": "Bloqueado",
     "HeaderStudios": "Estudios",
-    "HeaderActor": "Actors",
-    "HeaderComposer": "Composers",
-    "HeaderDirector": "Directors",
-    "HeaderGuestStar": "Guest star",
-    "HeaderProducer": "Producers",
-    "HeaderWriter": "Writers",
+    "HeaderActor": "Actores",
+    "HeaderComposer": "Compositores",
+    "HeaderDirector": "Directores",
+    "HeaderGuestStar": "Estrella invitada",
+    "HeaderProducer": "Productores",
+    "HeaderWriter": "Guionistas",
     "HeaderParentalRatings": "Clasificaci\u00f3n Parental",
-    "HeaderCommunityRatings": "Community ratings"
+    "HeaderCommunityRatings": "Clasificaciones de la comunidad"
 }
