--- a/MediaBrowser.Server.Implementations/Localization/Core/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/fr.json
@@ -132,24 +132,24 @@
     "HeaderUser": "Utilisateur",
     "HeaderName": "Nom",
     "HeaderDate": "Date",
-    "HeaderPremiereDate": "Premiere Date",
-    "HeaderDateAdded": "Date Added",
+    "HeaderPremiereDate": "Date de la Premi\u00e8re",
+    "HeaderDateAdded": "Date d'ajout",
     "HeaderReleaseDate": "Date de sortie ",
     "HeaderRuntime": "Dur\u00e9e",
-    "HeaderPlayCount": "Play Count",
+    "HeaderPlayCount": "Nombre de lectures",
     "HeaderSeason": "Saison",
     "HeaderSeasonNumber": "Num\u00e9ro de saison",
-    "HeaderSeries": "Series:",
+    "HeaderSeries": "S\u00e9ries :",
     "HeaderNetwork": "R\u00e9seau",
-    "HeaderYear": "Year:",
-    "HeaderYears": "Years:",
-    "HeaderParentalRating": "Parental Rating",
+    "HeaderYear": "Ann\u00e9e :",
+    "HeaderYears": "Ann\u00e9es :",
+    "HeaderParentalRating": "Classification parentale",
     "HeaderCommunityRating": "Note de la communaut\u00e9",
     "HeaderTrailers": "Bandes-annonces",
     "HeaderSpecials": "Episodes sp\u00e9ciaux",
-    "HeaderGameSystems": "Game Systems",
-    "HeaderPlayers": "Players:",
-    "HeaderAlbumArtists": "Album Artists",
+    "HeaderGameSystems": "Plateformes de jeu",
+    "HeaderPlayers": "Lecteurs :",
+    "HeaderAlbumArtists": "Artistes sur l'album",
     "HeaderAlbums": "Albums",
     "HeaderDisc": "Disque",
     "HeaderTrack": "Piste",
@@ -162,15 +162,15 @@
     "HeaderCountries": "Pays",
     "HeaderStatus": "\u00c9tat",
     "HeaderTracks": "Pistes",
-    "HeaderMusicArtist": "Music artist",
+    "HeaderMusicArtist": "Artiste de l'album",
     "HeaderLocked": "Verrouill\u00e9",
     "HeaderStudios": "Studios",
-    "HeaderActor": "Actors",
-    "HeaderComposer": "Composers",
-    "HeaderDirector": "Directors",
-    "HeaderGuestStar": "Guest star",
-    "HeaderProducer": "Producers",
-    "HeaderWriter": "Writers",
+    "HeaderActor": "Acteurs",
+    "HeaderComposer": "Compositeurs",
+    "HeaderDirector": "R\u00e9alisateurs",
+    "HeaderGuestStar": "R\u00f4le principal",
+    "HeaderProducer": "Producteurs",
+    "HeaderWriter": "Auteur(e)s",
     "HeaderParentalRatings": "Note parentale",
-    "HeaderCommunityRatings": "Community ratings"
+    "HeaderCommunityRatings": "Classification de la communaut\u00e9"
 }
