--- a/MediaBrowser.Server.Implementations/Localization/Core/pt-BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/pt-BR.json
@@ -112,7 +112,7 @@
     "MessageServerConfigurationUpdated": "A configura\u00e7\u00e3o do servidor foi atualizada",
     "MessageNamedServerConfigurationUpdatedWithValue": "A se\u00e7\u00e3o {0} da configura\u00e7\u00e3o do servidor foi atualizada",
     "MessageApplicationUpdated": "O Servidor Emby foi atualizado",
-    "FailedLoginAttemptWithUserName": "Falha em tentativa de login de {0}",
+    "FailedLoginAttemptWithUserName": "Falha na tentativa de login de {0}",
     "AuthenticationSucceededWithUserName": "{0} autenticou-se com sucesso",
     "DeviceOfflineWithName": "{0} foi desconectado",
     "UserLockedOutWithName": "Usu\u00e1rio {0} foi bloqueado",
@@ -132,24 +132,24 @@
     "HeaderUser": "Usu\u00e1rio",
     "HeaderName": "Nome",
     "HeaderDate": "Data",
-    "HeaderPremiereDate": "Premiere Date",
-    "HeaderDateAdded": "Date Added",
+    "HeaderPremiereDate": "Data da Estr\u00e9ia",
+    "HeaderDateAdded": "Data da Adi\u00e7\u00e3o",
     "HeaderReleaseDate": "Data de lan\u00e7amento",
     "HeaderRuntime": "Dura\u00e7\u00e3o",
-    "HeaderPlayCount": "Play Count",
+    "HeaderPlayCount": "N\u00famero de Reprodu\u00e7\u00f5es",
     "HeaderSeason": "Temporada",
     "HeaderSeasonNumber": "N\u00famero da temporada",
-    "HeaderSeries": "Series:",
+    "HeaderSeries": "S\u00e9rie:",
     "HeaderNetwork": "Rede de TV",
-    "HeaderYear": "Year:",
-    "HeaderYears": "Years:",
-    "HeaderParentalRating": "Parental Rating",
+    "HeaderYear": "Ano:",
+    "HeaderYears": "Anos:",
+    "HeaderParentalRating": "Classifica\u00e7\u00e3o Parental",
     "HeaderCommunityRating": "Avalia\u00e7\u00e3o da Comunidade",
     "HeaderTrailers": "Trailers",
     "HeaderSpecials": "Especiais",
-    "HeaderGameSystems": "Game Systems",
-    "HeaderPlayers": "Players:",
-    "HeaderAlbumArtists": "Album Artists",
+    "HeaderGameSystems": "Sistemas de Jogo",
+    "HeaderPlayers": "Jogadores:",
+    "HeaderAlbumArtists": "Artistas do \u00c1lbum",
     "HeaderAlbums": "\u00c1lbuns",
     "HeaderDisc": "Disco",
     "HeaderTrack": "Faixa",
@@ -162,15 +162,15 @@
     "HeaderCountries": "Pa\u00edses",
     "HeaderStatus": "Status",
     "HeaderTracks": "Faixas",
-    "HeaderMusicArtist": "Music artist",
+    "HeaderMusicArtist": "Artista da m\u00fasica",
     "HeaderLocked": "Travado",
     "HeaderStudios": "Est\u00fadios",
-    "HeaderActor": "Actors",
-    "HeaderComposer": "Composers",
-    "HeaderDirector": "Directors",
-    "HeaderGuestStar": "Guest star",
-    "HeaderProducer": "Producers",
-    "HeaderWriter": "Writers",
+    "HeaderActor": "Atores",
+    "HeaderComposer": "Compositores",
+    "HeaderDirector": "Diretores",
+    "HeaderGuestStar": "Ator convidado",
+    "HeaderProducer": "Produtores",
+    "HeaderWriter": "Escritores",
     "HeaderParentalRatings": "Classifica\u00e7\u00f5es Parentais",
-    "HeaderCommunityRatings": "Community ratings"
+    "HeaderCommunityRatings": "Avalia\u00e7\u00f5es da comunidade"
 }
