--- a/MediaBrowser.Server.Implementations/Localization/Core/ru.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/ru.json
@@ -132,24 +132,24 @@
     "HeaderUser": "\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c",
     "HeaderName": "\u0418\u043c\u044f (\u043d\u0430\u0437\u0432\u0430\u043d\u0438\u0435)",
     "HeaderDate": "\u0414\u0430\u0442\u0430",
-    "HeaderPremiereDate": "Premiere Date",
-    "HeaderDateAdded": "Date Added",
+    "HeaderPremiereDate": "\u0414\u0430\u0442\u0430 \u043f\u0440\u0435\u043c\u044c\u0435\u0440\u044b",
+    "HeaderDateAdded": "\u0414\u0430\u0442\u0430 \u0434\u043e\u0431-\u0438\u044f",
     "HeaderReleaseDate": "\u0414\u0430\u0442\u0430 \u0432\u044b\u043f.",
     "HeaderRuntime": "\u0414\u043b\u0438\u0442.",
-    "HeaderPlayCount": "Play Count",
+    "HeaderPlayCount": "\u041a\u043e\u043b-\u0432\u043e \u0432\u043e\u0441\u043f\u0440-\u0438\u0439",
     "HeaderSeason": "\u0421\u0435\u0437\u043e\u043d",
     "HeaderSeasonNumber": "\u041d\u043e\u043c\u0435\u0440 \u0441\u0435\u0437\u043e\u043d\u0430",
-    "HeaderSeries": "Series:",
+    "HeaderSeries": "\u0421\u0435\u0440\u0438\u0430\u043b:",
     "HeaderNetwork": "\u0422\u0435\u043b\u0435\u0441\u0435\u0442\u044c",
-    "HeaderYear": "Year:",
-    "HeaderYears": "Years:",
-    "HeaderParentalRating": "Parental Rating",
+    "HeaderYear": "\u0413\u043e\u0434:",
+    "HeaderYears": "\u0413\u043e\u0434\u044b:",
+    "HeaderParentalRating": "\u0412\u043e\u0437\u0440. \u043a\u0430\u0442-\u0438\u044f",
     "HeaderCommunityRating": "\u041e\u0431\u0449. \u043e\u0446\u0435\u043d\u043a\u0430",
     "HeaderTrailers": "\u0422\u0440\u0435\u0439\u043b.",
     "HeaderSpecials": "\u0421\u043f\u0435\u0446.",
-    "HeaderGameSystems": "Game Systems",
-    "HeaderPlayers": "Players:",
-    "HeaderAlbumArtists": "Album Artists",
+    "HeaderGameSystems": "\u0418\u0433\u0440. \u0441\u0438\u0441\u0442\u0435\u043c\u044b",
+    "HeaderPlayers": "\u0418\u0433\u0440\u043e\u043a\u0438:",
+    "HeaderAlbumArtists": "\u0410\u043b\u044c\u0431\u043e\u043c. \u0438\u0441\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u0438",
     "HeaderAlbums": "\u0410\u043b\u044c\u0431\u043e\u043c\u044b",
     "HeaderDisc": "\u0414\u0438\u0441\u043a",
     "HeaderTrack": "\u0414\u043e\u0440-\u043a\u0430",
@@ -162,15 +162,15 @@
     "HeaderCountries": "\u0421\u0442\u0440\u0430\u043d\u044b",
     "HeaderStatus": "\u0421\u043e\u0441\u0442-\u0438\u0435",
     "HeaderTracks": "\u0414\u043e\u0440-\u043a\u0438",
-    "HeaderMusicArtist": "Music artist",
+    "HeaderMusicArtist": "\u041c\u0443\u0437. \u0438\u0441\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c",
     "HeaderLocked": "\u0417\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u043e",
     "HeaderStudios": "\u0421\u0442\u0443\u0434\u0438\u0438",
-    "HeaderActor": "Actors",
-    "HeaderComposer": "Composers",
-    "HeaderDirector": "Directors",
-    "HeaderGuestStar": "Guest star",
-    "HeaderProducer": "Producers",
-    "HeaderWriter": "Writers",
+    "HeaderActor": "\u0410\u043a\u0442\u0451\u0440\u044b",
+    "HeaderComposer": "\u041a\u043e\u043c\u043f\u043e\u0437\u0438\u0442\u043e\u0440\u044b",
+    "HeaderDirector": "\u0420\u0435\u0436\u0438\u0441\u0441\u0451\u0440\u044b",
+    "HeaderGuestStar": "\u041f\u0440\u0438\u0433\u043b. \u0430\u043a\u0442\u0451\u0440",
+    "HeaderProducer": "\u041f\u0440\u043e\u0434\u044e\u0441\u0435\u0440\u044b",
+    "HeaderWriter": "\u0421\u0446\u0435\u043d\u0430\u0440\u0438\u0441\u0442\u044b",
     "HeaderParentalRatings": "\u0412\u043e\u0437\u0440\u0430\u0441\u0442\u043d\u0430\u044f \u043a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u044f",
-    "HeaderCommunityRatings": "Community ratings"
+    "HeaderCommunityRatings": "\u041e\u0431\u0449. \u043e\u0446\u0435\u043d\u043a\u0438"
 }
